updated by rakesh

--- a/RikuStyleApp/WebContent/signup.html
+++ b/RikuStyleApp/WebContent/signup.html
@@ -9,16 +9,18 @@
    <div class="loginbox">
 		<img src="logo.png" class="sweet">
 		<h1>Registration Here</h1>
-		<form action="gourl" method="get">
+		<form action="gourl" method="post">
 		<p>Name*</p>
 			<input type="text" name="pname" placeholder="Enter Username">
 			
 			<p>Enter Email*</p>
 			<input type="text" name="pmail" placeholder="Enter Email">
-			<p>Password*</p>
+			<p>Create Password*</p>
 			<input type="password" name="pass" placeholder="Enter Password">
+			<p>Confirm Password*</p>
+			<input type="password" name="cpass" placeholder="confirm Password">
 			<input type="submit"  value="Register">
-			<a href="input.html">Home</a></br>
+			<a href="input.html" id="hm">Home</a></br>
 			
 			
 					</form>
