--- a/RikuStyleApp/WebContent/login.html
+++ b/RikuStyleApp/WebContent/login.html
@@ -9,11 +9,11 @@
 	<div class="loginbox">
 		<img src="sweet.jpg" class="sweet">
 		<h1>Login Here</h1>
-		<form action="">
+		<form action="index2.jsp" method="post">
 			<p>User Name</p>
-			<input type="text" name="" placeholder="Enter Username">
+			<input type="text" name="email" placeholder="Enter Username">
 			<p>Password</p>
-			<input type="password" name="" placeholder="Enter Password">
+			<input type="password" name="pass" placeholder="Enter Password">
 			<input type="submit" name="" value="Login">
 			<a href="">Forgot Password</a></br>
 			<a href="">Create New Account</a></br>
