input1.css is new

--- a/RikuStyleApp/WebContent/index.html
+++ b/RikuStyleApp/WebContent/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>index page</title>
+	<title>Login page</title>
 	<link rel="stylesheet" type="text/css" href="input.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -181,7 +181,7 @@
           		<i class="fa fa-star"></i>
           		<i class="fa fa-star"></i>
           		<i class="fa fa-star"></i>
-          		<i class="fa fa-star-half-o"></i>2
+          		<i class="fa fa-star-half-o"></i>
                     <h3>Boat Headphone</h3>
                     <h5>₹1000.00</h5>
           	</div>
@@ -210,8 +210,8 @@
           		<i class="fa fa-star"></i>
           		<i class="fa fa-star"></i>
           		<i class="fa fa-star-half-o"></i>
-                    <h3>Boat Headphone</h3>
-                    <h5>₹1000.00</h5>
+                    <h3>Formal Pant</h3>
+                    <h5>₹800.00</h5>
           	</div>
           </div>
 
@@ -236,8 +236,8 @@
           		<i class="fa fa-star"></i>
           		<i class="fa fa-star"></i>
           		<i class="fa fa-star-half-o"></i>
-                    <h3>Boat Headphone</h3>
-                    <h5>₹1000.00</h5>
+                    <h3>Sunny Shoes</h3>
+                    <h5>₹1500.00</h5>
           	</div>
           </div>
 
@@ -264,8 +264,8 @@
           		<i class="fa fa-star"></i>
           		<i class="fa fa-star"></i>
           		<i class="fa fa-star-half-o"></i>
-                    <h3>Boat Headphone</h3>
-                    <h5>₹1000.00</h5>
+                    <h3>Half Shirt</h3>
+                    <h5>₹800.00</h5>
           	</div>
           </div>
 
