--- a/RikuStyleApp/WebContent/signup.html
+++ b/RikuStyleApp/WebContent/signup.html
@@ -6,25 +6,25 @@
 <link rel="styleSheet" type="text/css" href="crt.css">
 </head>
 <body>
-   <div class="loginbox">
+	<div class="loginbox">
 		<img src="logo.png" class="sweet">
 		<h1>Registration Here</h1>
 		<form action="gourl" method="post">
-		<p>Name*</p>
+			<p>Name*</p>
 			<input type="text" name="pname" placeholder="Enter Username">
-			
+
 			<p>Enter Email*</p>
 			<input type="text" name="pmail" placeholder="Enter Email">
 			<p>Create Password*</p>
 			<input type="password" name="pass" placeholder="Enter Password">
 			<p>Confirm Password*</p>
 			<input type="password" name="cpass" placeholder="confirm Password">
-			<input type="submit"  value="Register">
-			<a href="input.html" id="hm">Home</a></br>
-			
-			
-					</form>
-   </div>
+			<input type="submit" value="Register"> <a href="input.html"
+				id="hm">Home</a></br>
+
+
+		</form>
+	</div>
 
 </body>
 </html>
