--- a/RikuStyleApp/WebContent/create1.html
+++ b/RikuStyleApp/WebContent/create1.html
@@ -6,23 +6,22 @@
 <link rel="styleSheet" type="text/css" href="crt1.css">
 </head>
 <body>
-   <div class="loginbox">
+	<div class="loginbox">
 		<img src="logo.png" class="sweet">
 		<h1>Registration Here</h1>
 		<form action="gourl" method="get">
-		<p>Set Username*</p>
+			<p>Set Username*</p>
 			<input type="text" name="pname" placeholder="Set Username">
-			
+
 			<p>Enter Password*</p>
 			<input type="password" name="passs" placeholder="Enter Password">
 			<p>Confirm Password*</p>
 			<input type="password" name="pass" placeholder="Confirm Password">
-			<input type="submit"  value="Register">
-			<a href="input.html">Home</a></br>
-			
-			
-					</form>
-   </div>
+			<input type="submit" value="Register"> <a href="input.html">Home</a></br>
+
+
+		</form>
+	</div>
 
 </body>
 </html>
