--- a/RikuStyleApp/WebContent/login.html
+++ b/RikuStyleApp/WebContent/login.html
@@ -14,11 +14,10 @@
 			<input type="text" name="email" placeholder="Enter Username">
 			<p>Password</p>
 			<input type="password" name="pass" placeholder="Enter Password">
-			<input type="submit" name="" value="Login">
-			<a href="">Forgot Password</a></br>
-			<a href="">Create New Account</a></br>
-			
-					</form>
+			<input type="submit" name="" value="Login"> <a href="">Forgot
+				Password</a></br> <a href="">Create New Account</a></br>
+
+		</form>
 
 
 
