updated signup and login

--- a/RikuStyleApp/WebContent/login.html
+++ b/RikuStyleApp/WebContent/login.html
@@ -15,7 +15,7 @@
 			<p>Password</p>
 			<input type="password" name="pass" placeholder="Enter Password">
 			<input type="submit" name="" value="Login"> <a href="">Forgot
-				Password</a></br> <a href="">Create New Account</a></br>
+				Password</a></br> <a href="signup.html">Create New Account</a></br>
 
 		</form>
 
